Fixed ellipsis overflow

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -233,11 +233,10 @@
     margin-top: 10px;
     color: gray;
     margin-bottom: $value-low-space;
+    width: 350px;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
   }
 
   &__publi-desktop {
